@@ -3,18 +3,24 @@ package seedu.address.storage;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
 
 import seedu.address.commons.exceptions.IllegalValueException;
+import seedu.address.model.appointment.Appointment;
 import seedu.address.model.person.Address;
+import seedu.address.model.person.Date;
+import seedu.address.model.person.DateOfBirth;
 import seedu.address.model.person.Email;
+import seedu.address.model.person.Income;
 import seedu.address.model.person.Name;
 import seedu.address.model.person.Person;
 import seedu.address.model.person.Phone;
+import seedu.address.model.person.Priority;
+import seedu.address.model.person.Remark;
 import seedu.address.model.tag.Tag;
 
 /**
@@ -28,19 +34,37 @@ class JsonAdaptedPerson {
     private final String phone;
     private final String email;
     private final String address;
+    private final String priority;
+    private final String remark;
+    private final String dateOfBirth;
+    private final Double income;
+    private final JsonAdaptedAppointment appointment;
     private final List<JsonAdaptedTag> tags = new ArrayList<>();
 
     /**
      * Constructs a {@code JsonAdaptedPerson} with the given person details.
      */
     @JsonCreator
-    public JsonAdaptedPerson(@JsonProperty("name") String name, @JsonProperty("phone") String phone,
-            @JsonProperty("email") String email, @JsonProperty("address") String address,
+    public JsonAdaptedPerson(
+            @JsonProperty("name") String name,
+            @JsonProperty("phone") String phone,
+            @JsonProperty("email") String email,
+            @JsonProperty("address") String address,
+            @JsonProperty("priority") String priority,
+            @JsonProperty("remark") String remark,
+            @JsonProperty("dateOfBirth") String dateOfBirth,
+            @JsonProperty("income") Double income,
+            @JsonProperty("appointment") JsonAdaptedAppointment appointment,
             @JsonProperty("tags") List<JsonAdaptedTag> tags) {
         this.name = name;
         this.phone = phone;
         this.email = email;
         this.address = address;
+        this.priority = priority;
+        this.remark = remark;
+        this.dateOfBirth = dateOfBirth;
+        this.income = income;
+        this.appointment = appointment;
         if (tags != null) {
             this.tags.addAll(tags);
         }
@@ -54,9 +78,16 @@ class JsonAdaptedPerson {
         phone = source.getPhone().value;
         email = source.getEmail().value;
         address = source.getAddress().value;
+        priority = source.getPriority().name();
+        remark = source.getRemark().value;
+        dateOfBirth = source.getDateOfBirth().getValue();
+        income = source.getIncome().getValue();
+        appointment = Optional.ofNullable(source.getAppointment())
+                .map(JsonAdaptedAppointment::new)
+                .orElse(null);
         tags.addAll(source.getTags().stream()
                 .map(JsonAdaptedTag::new)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     /**
@@ -102,8 +133,43 @@ class JsonAdaptedPerson {
         }
         final Address modelAddress = new Address(address);
 
-        final Set<Tag> modelTags = new HashSet<>(personTags);
-        return new Person(modelName, modelPhone, modelEmail, modelAddress, modelTags);
-    }
+        if (priority == null) {
+            throw new IllegalValueException(
+                    String.format(MISSING_FIELD_MESSAGE_FORMAT, Priority.class.getSimpleName()));
+        }
 
+        final Priority modelPriority;
+        try {
+            modelPriority = Priority.valueOf(priority);
+        } catch (IllegalArgumentException e) {
+            throw new IllegalValueException(Priority.MESSAGE_CONSTRAINTS);
+        }
+
+        final Remark modelRemark = new Remark(remark == null ? "" : remark);
+
+        if (dateOfBirth == null) {
+            throw new IllegalValueException(String.format(MISSING_FIELD_MESSAGE_FORMAT, Date.class.getSimpleName()));
+        }
+        if (!Date.isValidDate(dateOfBirth)) {
+            throw new IllegalValueException(Date.MESSAGE_CONSTRAINTS);
+        }
+        final DateOfBirth modelDateOfBirth = new DateOfBirth(dateOfBirth);
+
+        final Income modelIncome;
+        if (income == null) {
+            modelIncome = new Income(0);
+        } else if (Income.isValidIncome(income)) {
+            modelIncome = new Income(income);
+        } else {
+            throw new IllegalValueException(Income.MESSAGE_CONSTRAINTS);
+        }
+
+        final Appointment modelAppointment = Optional.ofNullable(appointment)
+                .map(JsonAdaptedAppointment::toModelType)
+                .orElse(null);
+
+        final Set<Tag> modelTags = new HashSet<>(personTags);
+        return new Person(modelName, modelPhone, modelEmail, modelAddress, modelPriority,
+                modelRemark, modelDateOfBirth, modelIncome, modelAppointment, modelTags);
+    }
 }
